--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+###DB Config###
+spring.datasource.url=jdbc:mysql://localhost:3306/katadbtest
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=mypass
+
+spring.jpa.show-sql=true
+
+###Hibernate Config###
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.hiddenmethod.filter.enabled=true
+
 
